Add initial composers collection

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,9 @@ permalink: pretty
 collections:
   posts:
     output: true
+  composers:
+    output: true
+    permalink: /composers/:slug/
 sass:
   sass_dir: assets/css
   style: compressed
